[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "puyopuyo"
version = "0.0.0"
description = "puyopuyo on CLI"
readme = "README.md"
keywords = [
  "cli",
  "puyopuyo",
]
license = { text = "MIT" }
authors = [
  { name = "betacode", email = "betacode.net@gmail.com" },
]
requires-python = ">=3.10,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]
urls.Repository = "https://github.com/hirosuke-pi/puyopuyo"
scripts.puyopuyo = "puyopuyo.puyopuyo:main"

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "pre-commit>=4.1",
  "taskipy>=1.14.1",
]

[tool.black]
line-length = 120
target-version = [
  'py310',
]

[tool.ruff]
line-length = 120

lint.select = [
  "ALL",
]
lint.ignore = [
  "D",
]
# lint.mccabe.max-complexity = 18

lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]

[tool.mypy]
pretty = true
python_version = "3.10"
show_error_codes = true
strict = true

[tool.taskipy.tasks]
test = "pytest --cov=puyopuyo --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
